fix: 이미지 css 수정 및 prism css 추가

--- a/content/posts/2021-06-08---고차함수를 사용하자.md
+++ b/content/posts/2021-06-08---고차함수를 사용하자.md
@@ -8,7 +8,7 @@ category: "Javascript"
 tags:
   - "Javascript"
   - "function"
-description: "자바스크립트 고차함수를 설명합니다."
+description: "자바스크립트 고차함수를 설명합니다. 기존 for를 사용하는 방식과 달리 고차함수를 사용하여 많은 장점을 가질 수 있습니다."
 socialImage: "/media/javascript-image.png"
 ---
 
@@ -21,6 +21,7 @@ socialImage: "/media/javascript-image.png"
 
 - for를 사용할 경우 조건 값을 정확히 알고 있어야한다.
 - for 문을 계속 돌려도 똑같은 결과 값이 나올지 예측하기 힘들다.
+- **map, set, forEach, reduce 등 개발자의 의도를 파악하기 쉽다.**
 
 ### concat()
 
