--- a/content/posts/2021-06-07---VUE 성능 최적화 .md
+++ b/content/posts/2021-06-07---VUE 성능 최적화 .md
@@ -8,7 +8,7 @@ category: "Vue"
 tags:
   - "Web"
   - "Vue"
-description: "Vue 성능 최적화를 위한 방법에 대한 설명입니다."
+description: "Vue 성능 최적화를 위한 방법을 설명합니다. 간단한 한 옵션을 통해 렌더링 성능을 개선할 수 있습니다."
 socialImage: "/media/vue-image.jpg"
 ---
 
