fix: 이미지 아이콘 변경

--- a/content/posts/vue/2021-06-07---VUE 성능 최적화 .md
+++ b/content/posts/vue/2021-06-07---VUE 성능 최적화 .md
@@ -9,7 +9,7 @@ tags:
   - "Web"
   - "Vue"
 description: "Vue 성능 최적화를 위한 방법을 설명합니다. 간단한 한 옵션을 통해 렌더링 성능을 개선할 수 있습니다."
-socialImage: "/media/vue-image.jpg"
+socialImage: "/media/vue-icon.png"
 ---
 
 뷰 성능을 개선하기 위해 어떤 방법들이 있을까 생각하던 중 잘 정리되어 있는 블로그가 있어서 소개해 드릴려고 합니다. 웹은 자바스크립트의 알고리즘보다 브라우저의 렌더링, 리플로우를 최대한 줄이는 것이 성능에 도움이 됩니다. 렌더링을 자주 하지 않는 컴포넌트에 대해서 v-once, keep-alive를 해준다던지 v-if와 v-show를 잘 구분해서 쓰는것도 사소하지만 성능에 도움이 됩니다.
