docs : experience 프로젝트 경험 문서 수정

--- a/content/posts/experience/2021-06-18---Vue 프로젝트 경험 .md
+++ b/content/posts/experience/2021-06-18---Vue 프로젝트 경험 .md
@@ -13,15 +13,16 @@ socialImage: '/media/vue-icon.png'
 
 Vue 프로젝트 경험과 프로젝트 하면서 고민했던 내용들입니다. 어떻게하면 공통된 코드를 일관되게 유지하면서 유지보수를 잘 할 수 있는지에 대해 중점적으로 다루었습니다.
 
-# 모바일 사원증 프로젝트
+<br>
 
-<figure style="display: flex; align-items: center;">
-  <div style="width:100%; margin: 0 20px;">
+<figure style="display: flex; ">
+  <div style="width:50%; margin: 0 20px;">
         <img src="../../pages/mobile-app.jpg" alt="모바일 사원증 앱" />
         <figcaption>모바일 사원증 앱</figcaption>
         </div>
-  <div >
-DID 기반 모바일 사원증 프로젝트로 본인인증과 인사 정보를 받아 블록체인 자기 신원증명으로 인증서를 만들어주고 이 인증서를 통해 출입증을 발급합니다. 발급받은 출입증에는 출입할 수 있는 고유번호가 있으며 모바일의 블루투스나 NFC로 출입문 게이트를 인식해 유효하다고 판단하면 게이트를 열어주는 앱입니다.
+  <div>
+  <p style="font-size:2rem; font-weight: bold">모바일 사원증 프로젝트<p>
+DID 기반 모바일 사원증 프로젝트로 본인인증과 인사 정보를 받아 블록체인 자기 신원증명으로 인증서를 만들어주고 이 인증서를 통해 출입증을 발급합니다. 발급받은 출입증에는 출입할 수 있는 고유번호가 있으며 블루투스나 NFC로 출입문 게이트를 인식해 유효하다고 판단하면 게이트를 열어주는 앱입니다.
 </div>
 </figure>
 
@@ -32,16 +33,18 @@ DID 기반 모바일 사원증 프로젝트로 본인인증과 인사 정보를 
 ### UI
 
 - atomic 컴포넌트 적용
-- View 와 비즈니스 로직을 분리
+- UI 영역과 비즈니스 영역을 분리
 
 ### Service / Vuex-action
 
 - 실제 비즈니스 로직을 service 파일과 vuex의 action 활용
+- 기능별 xxxService.js 형태로 관리
 - 클린 아키텍처의 Controller/service 개념 통합
 
 ### api
 
-- 서버와 통신하는 비동기 통신 코드.
+- 서버와 통신하는 비동기 코드들
+- 기능 xxxApi.js 형태로 관리
 - 클린 아키텍처의 Gateway/Repository 개념 통합
 
 ### 상태관리
@@ -62,33 +65,39 @@ DID 기반 모바일 사원증 프로젝트로 본인인증과 인사 정보를 
 ### 타입스크립트 적용
 
 - 에러 사전에 방지 (런타임 -> 컴파일타임)
-- 개발 생산성 향상
+- 코드의 자동 완성을 통한 개발 생산성 향상
 - 각 기능별 entity 정의해서 사용
 
 ### 코드 컨벤션 작성
 
 - 가독성과 유지보수를 위한 일관된 코드를 위해 코드 컨벤션 필요
-- 아래 참조 사이트를 통해 파트 표준 컨벤션 정의
-- 컨벤션 정의를 게시판과 StoryBook을 통해 공유
+- 컨벤션 정의를 사내 게시판과 StoryBook을 통해 공유
+- 하단 참조 사이트를 통해 파트 표준 컨벤션 정의
 
 ![컨벤션 이미지](convention-image.png)
 
 ### 참조
 
-- [javascript convention](https://ui.toast.com/fe-guide/ko_CODING-CONVENTION)
-- [안티패턴](https://ui.toast.com/fe-guide/ko_ANTI-PATTERN)
-- [Vue 스타일 가이드](https://kr.vuejs.org/v2/style-guide/index.html) A규칙과 B규칙
+- [NHN Toast JS 컨벤션](https://ui.toast.com/fe-guide/ko_CODING-CONVENTION)
+- [NHN Toast JS 안티패턴](https://ui.toast.com/fe-guide/ko_ANTI-PATTERN)
+- [Vue 스타일 가이드](https://kr.vuejs.org/v2/style-guide/index.html)
 - [TypeScript 스타일 가이드](https://radlohead.gitbook.io/typescript-deep-dive/styleguide)
+
+### 라이브러리
+
+- bootstrap, validate, i18n, mask 등 개발에 필요한 라이브러리 사용
+- 다른 라이브러리와 비교할 때 사용성, 인기도, git star 수, 최근 업데이트 날짜, 이슈 사항 등 고려해서 선택
 
 ---
 
-## 🌈 하고싶었던 기능 추가
+## 🌈 기능 개선
 
 ### 변경 가능한 템플릿
 
-- 사원증의 템플릿이 고정적이지않고 관리자가 자유롭게 변경가능하도록 설계
+- 사원증의 템플릿이 고정적이지 않고 관리자가 자유롭게 변경가능 하도록 설계
 - fabric.js 라이브러리 활용
-- svg 사용
+- 다른 라이브러리로 pixi.js가 있었고 애니메이션에 좀 더 특화되어 있었음
+- 텍스트 위주로 사용과 svg 변환에 용이한 fabric.js 라이브러리 채택
 
 ![카드 템플릿 수정](../../pages/card-template.png)
 ![카드 템플릿 이미지들](../../pages/card-image.png)
